# wedding

./: .dockerignore  .env.prod.example  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PROJECT_STRUCTURE.md  TODO.md  alembic.ini  backup.sh  cli.py  docker-compose.prod.yml  docker-compose.yml  flake.nix  import_guests_example.csv  package.json  pnpm-lock.yaml  pyproject.toml  render.yaml  tunnel.sh  wrangler.json
.github/workflows/: caddy.yml  deploy.yml  webhook.yml
commands/: start_command.sh  test.sh
compose/db/: init-test-user-db.sh
deploy/: .env.prod.example  DEPLOYMENT.md
deploy/caddy/: Caddyfile
deploy/webhook/: Dockerfile  main.py  pyproject.toml
docs/: database-access.md
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  wrangler.json
frontend/src/components/: LanguageSwitcher.astro  PostHog.astro
migrations/: env.py  script.py.mako
migrations/versions/: 20240101_000000_initial_migration.py  2026_02_01_1803-68bcb874bd92_init_models.py  2026_02_02_0709-54c8e98ab9ff_split_rsvp_into_model.py  2026_02_07_1222-70e6186c5a09_fix_plus_one_of_id_foreign_key_to_.py  2026_02_07_1445-d9a53c8ac179_remove_plus_one_redundant_fields.py  2026_02_07_1520-a1b2c3d4e5f6_add_family_table.py  2026_02_07_1638-b2c3d4e5f6a7_add_guest_type.py  2026_02_14_1620-d6ea7082a6f2_add_email_send_on.py  2026_02_20_1443-add_allergies_column_to_guests.py  2026_02_20_1500-add_preferred_language_to_guests.py  2026_02_28_1440-6743ab9ccd87_convert_timestamps_to_timezone_aware.py  2026_03_01_0838-e056202eb20d_add_email_logs_table.py  2026_03_01_1821-cd8837ee4ecd_add_transport_table.py  2026_03_01_1902-d254bb00401d_add_needs_transport_to_rsvp_info.py  2026_03_09_1452-4065225aa62d_remove_foreign_key_constraints_from_.py  2026_03_09_1558-20c411bf8ce1_convert_email_type_to_varchar.py  2026_03_09_1715-cddde675a3a3_remove_enums.py
plans/: cloudflare_email_forwarding_with_resend_plan.md  database-backup-plan.md  database_session_refactor_plan.md  dummy_guest_cli_plan.md  email_logging_plan.md  import-guests-phases.md  resend_email_implementation_plan.md  rsvp_deadline_email_tests_plan.md  rsvp_validation_plan.md  vibe_code_atrso_plan.md  wedding_rsvp_plan.md
src/: conftest.py  events.py  main.py
src/config/: __init__.py  database.py  logging.py  settings.py  table_names.py
src/email/: __init__.py  base.py  resend_service.py  service.py  smtp_service.py  templates.py
src/email_service/: __init__.py  base.py  config.py  dtos.py  email_logger.py  email_status_updater.py  resend_service.py  smtp_service.py  template_builder.py  templates.py
src/guests/: dtos.py  routers.py  urls.py
src/models/: __init__.py  base.py  dietary.py  event.py  guest.py  user.py
src/routers/: __init__.py
src/webhooks/: __init__.py  router.py  schema.py  urls.py
src/wedding_rsvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+77 files in other folders)
